--- a/ad/ad/store/templates/store/register.html
+++ b/ad/ad/store/templates/store/register.html
@@ -1,7 +1,6 @@
 <h1>register</h1>
-<form method='post' action='/member/register_ok'>
-id : <input type='text' name='member_id' id='member_id' required=true><br>
-password : <input type='password' name='member_password' id='member_password' required=true><br>
+<form method='post' action='/store/register_ok'>
+email: <input type='email' name='store_email' id='store_email' required=true><br>
 email : <input type='email' name='member_email' id='member_email' required=true><br>
 address : <input type='text' name='member_address' id='member_address' required=true><br>
 phone : <input type='text' name='member_phone' id='member_phone' required=true><br>
